fixed bugs overflow for summary and  episode

--- a/Styles/card.css
+++ b/Styles/card.css
@@ -78,6 +78,7 @@
     text-align: justify;
     transform: scale(0, 0);
     transition: all .7s; 
+    overflow: hidden;
 }
 
 .card__summary{
